--- a/app/src/main/res/menu/tab_menu.xml
+++ b/app/src/main/res/menu/tab_menu.xml
@@ -6,7 +6,7 @@
         android:title="@string/menu_home"
     />
     <item
-        android:id="@+id/menu_categories"
+        android:id="@+id/menu_vote"
         android:icon="@mipmap/tab_bar_category_ic"
         android:title="@string/menu_categories"
         />
